[Refresh] Fix inactive tab bottom radius

BUG=873002
R=pkasting

Change-Id: I9ad2d5566ec0129a265e1f590ade2ccbc86a9541
Reviewed-on: https://chromium-review.googlesource.com/1171917
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582768}
Former-commit-id: c415fd93b2a5d6136cc0a6f794b8651ff7768623